@@ -279,26 +279,31 @@ class AcmeAccountProvider():
             'name': 'custom',
             'endpoint': None,
             'is_default': None,
+            'protocol': None,
             },
         1: {'id': 1,
             'name': 'letsencrypt-v1',
             'endpoint': 'https://acme-v01.api.letsencrypt.org',
             'is_default': None,
+            'protocol': 'acme-v1',
             },
         2: {'id': 2,
             'name': 'letsencrypt-v1-staging',
             'endpoint': 'https://acme-staging.api.letsencrypt.org',
             'is_default': None,
+            'protocol': 'acme-v1',
             },
         3: {'id': 3,
             'name': 'letsencrypt-v2',
             'endpoint': 'https://acme-v02.api.letsencrypt.org',
             'is_default': None,
+            'protocol': 'acme-v2',
             },
         4: {'id': 4,
             'name': 'letsencrypt-v2-staging',
             'endpoint': 'https://acme-staging-v02.api.letsencrypt.org',
             'is_default': None,
+            'protocol': 'acme-v2',
             },
     }
 
