@@ -69,6 +69,7 @@
 - system should configure based on acme provider, not url
 - update account/key authentication system to hit the right endpoint for the actual account
 - renamed `getcreate__SslAcmeAccountKey__by_pem_text` to `getcreate__SslAcmeAccountKey`
+- adding protocol tracking and control for endpoints
 
 
 
